# biokb_taxtree

./: .env_template  .gitignore  404.html  Dockerfile  README.md  docker-compose copy.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  tox.ini
background/: index.html
docs/: api.md  background.md  cli.md  how_to_run_neo4j.md  index.md  installation.md  mkdocs.yml  models.md  run_the_pipeline.md
docs/docs/: ethno.md  tutorial.md
docs/notebooks/: erdiagram.ipynb  query_examples.ipynb  test_workflow.ipynb  test_workflow_podman.ipynb
ethno/: index.html
notebooks/: create_erdiagram.ipynb  create_erdigram.ipynb  create_ttls.ipynb  import_data.ipynb  import_neo.ipynb  query.ipynb  test_workflow.ipynb  test_workflow_podman.ipynb
search/: search_index.json
src/biokb_taxtree/: __init__.py  cli.py  constants.py  logger.py  logging_config.yaml  tools.py
src/biokb_taxtree/api/: main.py  query_tools.py  schemas.py  tags.py
src/biokb_taxtree/db/: importer.py  manager.py  models.py  query.py
src/biokb_taxtree/rdf/: namespaces.py  neo4j_importer.py  turtle.py
tests/: test_api.py
tutorial/: index.html
workflows/: ci.yml
